looplogs/looplogs_older/intermittent_failures.py/intermittent_failures_3669d2eb3c8c7d5363dd7edcf929f066b0d85888.log
This run started at: 
1579049792
The zcashd version is: Zcash Daemon version v2.1.1-rc1-02706325c

In order to ensure you are adequately protecting your privacy when using Zcash,
please see <https://z.cash/support/security/>.

Copyright (C) 2009-2020 The Bitcoin Core Developers
Copyright (C) 2015-2020 The Zcash Developers

This is experimental software.

Distributed under the MIT software license, see the accompanying file COPYING
or <https://www.opensource.org/licenses/mit-license.php>.

This product includes software developed by the OpenSSL Project for use in the
OpenSSL Toolkit <https://www.openssl.org/> and cryptographic software written
by Eric Young.
=== Running testscript intermittent_failures.py ===
  File "/home/pherder/zcashes/intermittenttestfailures/master/qa/rpc-tests/intermittent_failures.py", line 35
    print(self.nodes[0].z_listunspent(0, saplingzaddr2)
        ^
SyntaxError: invalid syntax
!!! FAIL: intermittent_failures.py (0s) !!!



Tests completed: 1
successes 0; failures: 1

Failing tests: intermittent_failures.py
This run started at: 
1579049810
The zcashd version is: Zcash Daemon version v2.1.1-rc1-02706325c

In order to ensure you are adequately protecting your privacy when using Zcash,
please see <https://z.cash/support/security/>.

Copyright (C) 2009-2020 The Bitcoin Core Developers
Copyright (C) 2015-2020 The Zcash Developers

This is experimental software.

Distributed under the MIT software license, see the accompanying file COPYING
or <https://www.opensource.org/licenses/mit-license.php>.

This product includes software developed by the OpenSSL Project for use in the
OpenSSL Toolkit <https://www.openssl.org/> and cryptographic software written
by Eric Young.
=== Running testscript intermittent_failures.py ===
  File "/home/pherder/zcashes/intermittenttestfailures/master/qa/rpc-tests/intermittent_failures.py", line 35
    print(self.nodes[0].z_listunspent(0, saplingzaddr2)
        ^
SyntaxError: invalid syntax
!!! FAIL: intermittent_failures.py (0s) !!!



Tests completed: 1
successes 0; failures: 1

Failing tests: intermittent_failures.py
